results/SVCOMP/specgen/log-instanceof3-2024_02_27_16_20_59.txt
class Main {
    //@ requires args != null;
    //@ ensures \result == (args instanceof Object[]);
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires args != null;
                 ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (args instanceof Object[]);
                            ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
    //@ requires args != null;
    //@ ensures \result == (args instanceof Object[]);
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires args != null;
                 ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (args instanceof Object[]);
                            ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
    //@ requires \typeof(args) == \type(Object[]);
    //@ ensures \result == (args instanceof Object[]);
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires \typeof(args) == \type(Object[]);
                         ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (args instanceof Object[]);
                            ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
    //@ requires \typeof(args) == \type(Object[]);
    //@ ensures \result == (args instanceof Object[]);
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires \typeof(args) == \type(Object[]);
                         ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (args instanceof Object[]);
                            ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
    //@ requires \typeof(this.args) == \type(Object[]);
    //@ ensures \result == (this.args instanceof Object[]);
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: non-static variable this cannot be referenced from a static context
    //@ requires \typeof(this.args) == \type(Object[]);
                         ^
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires \typeof(this.args) == \type(Object[]);
                             ^
  symbol: variable args
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: non-static variable this cannot be referenced from a static context
    //@ ensures \result == (this.args instanceof Object[]);
                            ^
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (this.args instanceof Object[]);
                                ^
  symbol: variable args
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
5 errors

class Main {
    //@ requires \typeof(arr) == \type(Object[]);
    //@ ensures \result == (arr instanceof Object[]);
    public static boolean f(Object[] arr) {
        return arr instanceof Object[];
    }
}

